Fix python tutor not showing up

--- a/app/assets/stylesheets/components/tutor.css.scss
+++ b/app/assets/stylesheets/components/tutor.css.scss
@@ -1,7 +1,3 @@
-#tutor .modal-dialog.tutor {
-  width: 90%;
-}
-
 #tutor .modal-body {
   min-height: 200px;
 }
